# tree-sitter.kak

./: Cargo.toml  build.rs  default.nix  flake.nix  readme.md
config/: config.toml
rc/: tree-sitter.kak
src/: buffer.rs  config.rs  event.rs  kakoune.rs  languages.rs  main.rs  request.rs  server.rs  tree.rs
src/highlight/: mod.rs  range.rs
src/kakoune/: connection.rs  mod.rs  range.rs
src/languages/: mod.rs
src/languages/highlight/: rust.scm
