[package]
name = "kak-sitter"
description = "kakoune tree-sitter server"
license = "CC0-1.0"
version = "0.1.10"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/enricozb/tree-sitter.kak"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
daemonize = "0.5.0"
nix = { version = "0.26.2", features = ["fs"] }
serde = { version = "1.0.160", features = ["derive"] }
tempfile = "3.5.0"
toml = "0.7.3"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
